# embedding-lib

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_zh.md  _typos.toml  deny.toml
examples/: basic_usage.rs  qwen_example.rs
specs/: 0001-idea.md
src/: lib.rs
